# EdgeTrident

./: LICENSE  PLAN.md  settings.gradle.kts
LiteVisionEngine/: build.gradle.kts  consumer-rules.pro
LiteVisionEngine/src/main/assets/models/litevision/: .gitignore  README.md  object_tracker.bin.placeholder  object_tracker.param.placeholder
LiteVisionEngine/src/main/cpp/: CMakeLists.txt  litevisionengine_jni.cpp
LiteVisionEngine/src/main/cpp/ncnn/: README.md
LiteVisionEngine/src/main/java/adiga/shreyas/edgetrident/litevisionengine/: LiteVisionConfig.kt  LiteVisionEngine.kt  LiteVisionError.kt  NativeBridge.kt  NcnnModelSpec.kt  TrackingResult.kt  VisionFrame.kt
LiteVisionEngine/src/test/java/adiga/shreyas/edgetrident/litevisionengine/: LiteVisionContractsTest.kt
app/: build.gradle.kts
app/src/androidTest/java/adiga/shreyas/edgetrident/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/adiga/shreyas/edgetrident/: MainActivity.kt
app/src/main/java/adiga/shreyas/edgetrident/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/adiga/shreyas/edgetrident/vision/camera/: CameraInferenceAnalyzer.kt  CameraInferenceMetrics.kt  CameraStreamScreen.kt  MediaPipePoseEstimator.kt
app/src/main/java/adiga/shreyas/edgetrident/vision/pipeline/: LiteVisionObjectTrackerRunner.kt  ObjectDetectorRunner.kt  ObjectTrackerRunner.kt  VisionFrame.kt  (+3 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/adiga/shreyas/edgetrident/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
